# nexus-sdk

./: .editorconfig  .gitignore  .markdownlint.json  .nightly-version  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  README.md  RELEASING.md  STYLE_GUIDE.md  codecov.yml  deny.toml  justfile  rust-toolchain.toml
cli/: .just  Cargo.toml  README.md
cli/src/: display.rs  error.rs  main.rs  prelude.rs  sui.rs  utils.rs
cli/src/completion/: mod.rs
cli/src/conf/: conf_get.rs  conf_set.rs  mod.rs
cli/src/crypto/: crypto_auth.rs  crypto_generate_id_key.rs  crypto_init_key.rs  crypto_key_status.rs  crypto_set_passphrase.rs  mod.rs
cli/src/dag/: dag_execute.rs  dag_inspect_execution.rs  dag_publish.rs  dag_validate.rs  mod.rs  parser.rs  validator.rs
cli/src/dag/_dags/: both_vertex_and_entry_vertex_invalid.json  branched_net_zero_invalid.json  cyclic_invalid.json  dead_ends_valid.json  empty_invalid.json  encrypted_port_output_valid.json  entry_groups_ne_invalid.json  entry_groups_tm_invalid.json  entry_groups_twice_valid.json  entry_groups_valid.json  has_def_on_input_invalid.json  has_multiple_same_entry_inputs_invalid.json  ig_story_planner_valid.json  immediately_converges_invalid.json  immediately_converges_valid.json  intertwined_invalid.json  intertwined_valid.json  math_branching.json  math_branching_groups.json  multiple_entry_multiple_goal_invalid.json  multiple_entry_multiple_goal_valid.json  multiple_goals_valid.json  multiple_output_ports_invalid.json  multiple_output_ports_valid.json  normal_vertex_in_group_invalid.json  output_and_edge_invalid.json  references_non_existing_vertex.json  references_vertex_with_ports_invalid.json  trip_planner.json  undefined_connections_invalid.json
cli/src/gas/: gas_add_budget.rs  gas_expiry_buy_ticket.rs  gas_expiry_disable.rs  gas_expiry_enable.rs  mod.rs
cli/src/gas/tickets/: mod.rs
cli/src/gas/tickets/expiry/: buy_ticket.rs  disable.rs  enable.rs
cli/src/gas/tickets/limited_invocations/: buy_ticket.rs  (+3 more)
cli/src/network/: mod.rs  network_create.rs
cli/src/tool/: mod.rs  tool_claim_collateral.rs  tool_list.rs  tool_new.rs  tool_register.rs  tool_set_invocation_cost.rs  tool_unregister.rs  tool_validate.rs
cli/src/utils/secrets/: aes_gcm_encryption.rs  master_key.rs  master_key_provider.rs  mod.rs
sdk/: .just  Cargo.toml  README.md  build.rs
sdk/src/: events.rs  lib.rs  sui.rs  tool_fqn.rs
sdk/src/crypto/: double_ratchet.rs  mod.rs  secret_bytes.rs  session.rs  x3dh.rs
sdk/src/dag/: validator.rs
sdk/src/dag/_dags/: both_loops_valid.json  branched_net_zero_invalid.json  collect_without_for_each_invalid.json  cyclic_invalid.json  do_while_and_break_same_variant_invalid.json  do_while_in_for_each_invalid.json  do_while_nested_invalid.json  empty_invalid.json  entry_groups_twice_valid.json  entry_groups_valid.json  intertwined_valid.json  math_branching.json  math_branching_groups.json  missing_break_invalid.json  missing_do_while_invalid.json  multiple_entry_multiple_goal_valid.json  nested_for_each_invalid.json  trip_planner.json  unclosed_for_each_invalid.json
sdk/src/idents/: mod.rs  move_std.rs  primitives.rs  sui_framework.rs  tap.rs  workflow.rs
sdk/src/object_crawler/: fetching.rs  mod.rs  wrappers.rs
sdk/src/secret_core/: error.rs  secret.rs  traits.rs
sdk/src/test_utils/: containers.rs  contracts.rs  faucet.rs  gas.rs  mod.rs  sui_mocks.rs  wallet.rs
sdk/src/transactions/: crypto.rs  dag.rs  gas.rs  mod.rs  tool.rs
sdk/src/types/: json_dag.rs  mod.rs  nexus_data.rs  nexus_objects.rs  runtime_vertex.rs  serde_parsers.rs  tool_meta.rs  type_name.rs
sdk/src/walrus/: client.rs  mod.rs
sdk/src/walrus/models/: blob.rs  mod.rs  storage.rs  sui.rs
sdk/tests/: object_crawler_test.rs  walrus_client_test.rs
sdk/tests/move/object_crawler_test/: Move.toml
toolkit-rust/: .just  Cargo.toml  README.md  rustfmt.toml
toolkit-rust/src/: lib.rs  nexus_tool.rs  runtime.rs  secret.rs  serde_tracked.rs
toolkit-rust/tests/: integration.rs
tools/http/: Cargo.toml  README.md
tools/http/src/: errors.rs  http.rs  http_client.rs  main.rs  models.rs  utils.rs
tools/llm-openai-chat-completion/: Cargo.toml  README.md
tools/llm-openai-chat-completion/src/: main.rs  status.rs
tools/market-coinbase/: Cargo.toml  README.md
tools/market-coinbase/src/: coinbase_client.rs  error.rs  main.rs
tools/market-coinbase/src/market/: get_spot_price.rs  mod.rs  models.rs
tools/math/: Cargo.toml  README.md
tools/math/src/: main.rs
tools/math/src/i64/: add.rs  cmp.rs  mod.rs  mul.rs  sum.rs
tools/social-twitter/: Cargo.toml  README.md
tools/social-twitter/src/: auth.rs  error.rs  main.rs  twitter_client.rs
tools/social-twitter/src/direct_message/: create_group_conversation.rs  get_conversation_messages.rs  get_conversation_messages_by_id.rs  mod.rs  models.rs  send_direct_message.rs  send_message_to_group_conversation.rs
tools/social-twitter/src/list/: add_member.rs  create_list.rs  delete_list.rs  get_list.rs  get_list_members.rs  get_list_tweets.rs  get_user_lists.rs  mod.rs  models.rs  remove_member.rs  update_list.rs
tools/social-twitter/src/media/: mod.rs  models.rs  upload_media.rs
tools/social-twitter/src/tweet/: delete_tweet.rs  get_mentioned_tweets.rs  get_recent_search_tweets.rs  get_recent_tweet_count.rs  get_tweet.rs  get_tweets.rs  get_user_tweets.rs  like_tweet.rs  mod.rs  models.rs  post_tweet.rs  retweet_tweet.rs  undo_retweet_tweet.rs  unlike_tweet.rs
tools/social-twitter/src/user/: follow_user.rs  get_user_by_id.rs  get_user_by_username.rs  get_users_by_id.rs  get_users_by_username.rs  mod.rs  models.rs  unfollow_user.rs
tools/storage-walrus/: Cargo.toml  README.md
tools/storage-walrus/src/: client.rs  main.rs  read_file.rs  read_json.rs  upload_file.rs  upload_json.rs  utils.rs  verify_blob.rs
types/: .just  Cargo.toml
types/src/: lib.rs  sui.rs  tool_fqn.rs
types/src/idents/: mod.rs  move_std.rs  sap.rs  sui_framework.rs  workflow.rs
types/src/types/: mod.rs  nexus_data.rs  serde_parsers.rs  type_name.rs
(+69 files in other folders)
