[workspace]
resolver = "2"
members = ["toolkit-rust", "cli", "sdk", "tools/*"]

package.edition = "2021"
package.version = "0.2.0"
package.repository = "https://github.com/Talus-Network/nexus-sdk"
package.license-file = "LICENSE.txt"
package.readme = "README.md"
package.authors = ["Talus Engineers <engineering@taluslabs.xyz>"]
package.keywords = ["talus", "nexus", "rust", "sui", "sdk", "toolkit"]
package.categories = ["command-line-interface", "api-bindings"]

[workspace.dependencies]
anyhow = "1.0.97"
bip32 = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
convert_case = "0.7.1"
env_logger = "0.11.7"
home = "0.5.11"
jsonschema = "0.28.3"
lazy-regex = "3.4.1"
log = "^0.4.26"
minijinja = "2.8.0"
mockito = "1.7.0"
petgraph = "0.7.1"
portpicker = "0.1.1"
regex = "1.11.1"
reqwest = "0.12.14"
rstest = "0.25.0"
# Keep an eye for the full release here. We need v1 for draft2020-12 schema.
schemars = "1.0.0-alpha.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serial_test = "3.2.0"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3.19.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-retry = "0.3.0"
toml = "0.8.20"
warp = "0.3.7"

# === Nexus deps ===
nexus-toolkit = { path = "toolkit-rust" }
nexus-sdk = { path = "sdk" }
