[workspace]
resolver = "3"
members = ["toolkit-rust", "cli", "sdk", "tools/*"]

[workspace.package]
edition = "2021"
version = "0.2.0-rc.1"
repository = "https://github.com/Talus-Network/nexus-sdk"
homepage = "https://talus.network"
license-file = "LICENSE.txt"
readme = "README.md"
authors = ["Talus Engineers <engineering@taluslabs.xyz>"]
keywords = ["blockchain", "cli", "framework", "nexus", "sdk", "sui", "talus"]
categories = [
    "api-bindings",
    "command-line-interface",
    "cryptography::cryptocurrencies",
]

[workspace.dependencies]
anyhow = "1.0.97"
bip32 = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.48"
colored = "3.0.0"
convert_case = "0.7.1"
env_logger = "0.11.7"
home = "0.5.11"
jsonschema = "0.28.3"
lazy-regex = "3.4.1"
log = "^0.4.26"
minijinja = "2.8.0"
mockito = "1.7.0"
openssl = { version = "0.10", features = ["vendored"] }
petgraph = "0.7.1"
portpicker = "0.1.1"
regex = "1.11.1"
reqwest = "0.12.14"
rstest = "0.25.0"
# Keep an eye for the full release here. We need v1 for draft2020-12 schema.
schemars = "1.0.0-alpha.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serial_test = "3.2.0"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3.19.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-retry = "0.3.0"
toml = "0.8.20"
warp = "0.3.7"

# === Nexus deps ===
nexus-toolkit = { path = "toolkit-rust" }
nexus-sdk = { path = "sdk" }


[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = "packed"
# Decrease final binary size
strip = "debuginfo"
# Exit process with SIGABRT when any thread panics
panic = "abort"
