[package]
name = "nexus-cli"
description = "Nexus CLI provides an interface to interact with the Nexus Workflow."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
convert_case.workspace = true
home.workspace = true
indicatif.workspace = true
minijinja.workspace = true
openssl.workspace = true
petgraph.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

# === Nexus deps ===
[dependencies.nexus-sdk]
workspace = true
features = ["full"]

[dev-dependencies]
assert_fs = "1.1"
assert_matches = "1.5.0"
schemars.workspace = true
warp = "0.3.7"
rstest.workspace = true
tempfile.workspace = true
serial_test.workspace = true
nexus-toolkit.workspace = true

[dev-dependencies.nexus-sdk]
workspace = true
features = ["full", "test_utils"]
