[package]
name = "nexus-sdk"
description = "Nexus SDK provides a set of tools to interact with the Nexus Workflow."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["tool_fqn"]

# Tool FQN feature enables the use of the `ToolFqn` struct and `fqn!` macro.
# This feature is enabled by default.
tool_fqn = ["regex", "lazy-regex"]

# Sui Types feature gives access to the re-exported Sui types.
sui_types = [
    "sui_sdk",
    "move_core_types",
    "sui_keys",
    "shared_crypto",
    "sui_config",
]

# Sui idents feature enables the use of the `idents` module and adds sui-sdk
# and move-core-types as dependencies.
sui_idents = ["tool_fqn", "sui_types", "serde_json"]

# Types feature enables the use of the `types` module. Also adds reqwest as a
# dependency.
types = ["sui_types", "reqwest"]

# Events feature enables the use of the `events` module.
events = ["sui_idents", "types"]

# Object crawler feature enables the use of the `object_crawler` module.
object_crawler = ["sui_types", "serde_json"]

# Transactions feature enables the use of the `transactions` module. These are
# used in the CLI and tests and hide away PTBs for various Nexus operations.
transactions = ["sui_idents"]

# Walrus client feature enables the use of the `walrus` module, providing
# integration with the Walrus decentralized blob storage system.
walrus = ["reqwest", "futures-util", "tokio", "serde_json" , "thiserror"]

# Test utils feature enables the use of the `test_utils` module. Also adds
# tempfile, tokio-retry, sui_move_build, sui_package_management and
# testcontainers-modules as dependencies.
test_utils = [
    "types",
    "tempfile",
    "tokio-retry",
    "sui_move_build",
    "sui_package_management",
    "testcontainers-modules",
]

# Enable all features apart from `test_utils`.
full = [
    "tool_fqn",
    "sui_types",
    "sui_idents",
    "types",
    "events",
    "object_crawler",
    "transactions",
    "walrus",
]

[dependencies]
anyhow.workspace = true
serde.workspace = true

# === Optional deps ===
[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.lazy-regex]
workspace = true
optional = true

[dependencies.regex]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
optional = true
features = ["json", "stream"]

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["io-util"]
optional = true

[dependencies.tokio-retry]
workspace = true
optional = true

# === Sui deps ===
[dependencies.sui_sdk]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.45.3"
package = "sui-sdk"
optional = true

[dependencies.move_core_types]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.45.3"
package = "move-core-types"
optional = true

[dependencies.sui_keys]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.45.3"
package = "sui-keys"
optional = true

[dependencies.sui_config]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.45.3"
package = "sui-config"
optional = true

[dependencies.shared_crypto]
git = "https://github.com/mystenlabs/sui"
tag = "mainnet-v1.45.3"
package = "shared-crypto"
optional = true

[dependencies.sui_move_build]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.45.3"
package = "sui-move-build"
optional = true

[dependencies.sui_package_management]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.45.3"
package = "sui-package-management"
optional = true

[dependencies.testcontainers-modules]
git = "https://github.com/Talus-Network/testcontainers-rs-modules-community"
# TODO: change this once merged.
branch = "feat/add-sui-support"
features = ["sui", "redis"]
optional = true

# === Dev deps ===
[dev-dependencies]
assert_matches = "1.5.0"
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
mockito.workspace = true

# === Build deps ===
[build-dependencies]
toml = "0.8.20"
