[package]
name = "nexus-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
warp.workspace = true

# === Nexus deps ===
nexus-types.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serial_test = "3.2.0"
tokio = { version = "1.43.0", features = ["macros"] }
