[package]
name = "nexus-toolkit"
description = "Nexus Toolkit provides a Rust framework to create new Nexus Tools."

edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
warp.workspace = true

# === Nexus deps ===
nexus-sdk.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
serial_test = "3.2.0"
tokio = { version = "1.44.1", features = ["macros"] }
