[package]
name = "http"
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
backon = "0.4"
base64.workspace = true
jsonschema.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url = "2.5"

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk.workspace = true

[dev-dependencies]
mockito.workspace = true
