[package]
name = "llm-openai-chat-completion"
description = "Nexus Tools for OpenAI Chat Completion."

edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = "0.27"
chrono.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk.workspace = true

[dev-dependencies]
mockito = "1.7.0"
