[package]
name = "market-coinbase"
description = "Coinbase market data and trading tools for Nexus"

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk.workspace = true

[dev-dependencies]
mockito.workspace = true
