[package]
name = "math"
description = "Set of Nexus Tools for math operations."

edition.workspace = true
version.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
tokio.workspace = true

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk.workspace = true
