[package]
name = "walrus"
description = "Nexus Tools for Walrus Client Interaction"

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
jsonschema.workspace = true

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk = { workspace = true, features = ["walrus"] }

[dev-dependencies]
mockito.workspace = true
